--- a/iam-proxy-italia-project/static/locales/it.json
+++ b/iam-proxy-italia-project/static/locales/it.json
@@ -2,7 +2,7 @@
   "titles": {
     "login_digital_identity": "Accedi con un'identità digitale",
     "login_alternative_method" : "Accedi con un metodo alternativo",
-    "learn_more_id": "Scopri di più"
+    "learn_more": "Scopri di più"
   },
   "digital_id": {
     "cie": {
@@ -16,7 +16,7 @@
       "logo_text": "Entra con IT-Wallet",
       "logo": "wallet-it/wallet_icon.svg",
       "login_url": "https://localhost/Saml2/disco?entityID=wallet",
-      "learn_more": "IT-Wallet è il Sistema di portafoglio digitale italiano che ti dà il pieno controllo sulle tue informazioni, senza che l'ente che le ha rilasciate venga a conoscenza di quando e come vengono usate."
+      "learn_more_descr": "IT-Wallet è il Sistema di portafoglio digitale italiano che ti dà il pieno controllo sulle tue informazioni, senza che l'ente che le ha rilasciate venga a conoscenza di quando e come vengono usate."
     },
     "spid": {
       "name": "SPID",
