feat: update UI templates, add `how to get..` section for digital identity

--- a/iam-proxy-italia-project/static/locales/en.json
+++ b/iam-proxy-italia-project/static/locales/en.json
@@ -2,6 +2,9 @@
   "titles": {
     "login_digital_identity": "Log in with a digital identity",
     "login_alternative_method" : "Log in using an alternative method",
+    "havent_digital_identy": "Don't have a digital identity?",
+    "find_how_to_get_digital_id": "Find out how to get it",
+    "find_how_to_get_digital_id_url": "",
     "learn_more": "Learn more"
   },
   "digital_id": {
