feat: update UI qr code templates, fix ui and countdown expiration qrcode

--- a/iam-proxy-italia-project/static/locales/qr-en.json
+++ b/iam-proxy-italia-project/static/locales/qr-en.json
@@ -1,10 +1,10 @@
 {
-  "contentTitle": "Scan the QR code",
-  "qrCodeValidInfo": "The QR code is valid for __seconds__ seconds",
-  "supportText": "Use the IT-Wallet app feature or your smartphone camera",
+  "contentTitle": "<b>Scan the QR code</b>",
+  "qrCodeValidInfo": "The QR code is valid for <b>{{seconds}}</b> seconds",
+  "supportText": "Use the <b>IT-Wallet</b> app feature or your smartphone camera",
   "backLabel": "Cancel",
-  "qrCodeExpiredInfo": "Il codice QR è scaduto, ricarica la pagina per generarne uno nuovo.",
-  "qrCodeReloadLabel": "Ricarica",
+  "qrCodeExpiredInfo": "The QR code has expired, reload the page to generate a new one.",
+  "qrCodeReloadLabel": "Reload",
   "connectedTitle": "Connessione completata",
   "connectedText": "Ora puoi accedere al servizio.",
   "clickAccessLabel": "Accedi al servizio",
