--- a/iam-proxy-italia-project/static/locales/qr-it.json
+++ b/iam-proxy-italia-project/static/locales/qr-it.json
@@ -5,8 +5,10 @@
   "backLabel": "Indietro",
   "qrCodeExpiredInfo": "Il codice QR è scaduto, ricarica la pagina per generarne uno nuovo.",
   "qrCodeReloadLabel": "Ricarica",
-  "connectedTitle": "Continua sull'app IT-Wallet",
-  "connectedText": "Per proseguire, segui le istruzioni sull'app e autorizza l'accesso",
+  "appTitle": "Continua sull'app IT-Wallet",
+  "appText": "Per proseguire, segui le istruzioni sull'app e autorizza l'accesso",
+  "connectedTitle": "Autenticazione completata!",
+  "connectedText": "Continua sul sito",
   "clickAccessLabel": "Accedi al servizio",
   "failureTitle": "Non siamo riusciti a recuperare i dati della tua identità digitale",
   "failureText": "Ricorda che per effettuare l'accesso con IT-Wallet devi acconsentire alla lettura dei tuoi dati. Se il problema si ripete, contatta l'assistenza.",
