feat: update UI templates, add i18n for login_logo (view: 220#discussion_r2387516591)

--- a/iam-proxy-italia-project/static/locales/qr-it.json
+++ b/iam-proxy-italia-project/static/locales/qr-it.json
@@ -1,4 +1,5 @@
 {
+  "login_logo": "Accedi con il tuo wallet digitale",
   "contentTitle": "Inquadra il codice QR",
   "qrCodeValidInfo": "Il codice QR è valido per <b>{{seconds}}</b> secondi",
   "supportText": "Usa la funzionalità dell'app <b>IT-Wallet</b> o la fotocamera del tuo smartphone",
