--- a/iam-proxy-italia-project/static/locales/qr-it.json
+++ b/iam-proxy-italia-project/static/locales/qr-it.json
@@ -14,5 +14,10 @@
   "failureTitle": "Non siamo riusciti a recuperare i dati della tua identità digitale",
   "failureText": "Ricorda che per effettuare l'accesso con IT-Wallet devi acconsentire alla lettura dei tuoi dati. Se il problema si ripete, contatta l'assistenza.",
   "retryLabel": "Riprova",
-  "contactSupportLabel": "Contatta l'assistenza"
+  "contactSupportLabel": "Contatta l'assistenza",
+  "footer": {
+    "legal_notice": "Note legali",
+    "privacy_policy": "Privacy Policy",
+    "accessibility_statement": "Dichiarazione Accessibilità"
+  }
 }
