feat: update UI templates, set page_title (view: 220/files#r2388071334)

--- a/iam-proxy-italia-project/static/locales/wallets-it.json
+++ b/iam-proxy-italia-project/static/locales/wallets-it.json
@@ -1,5 +1,6 @@
 {
   "titles": {
+    "page_title": "Accedi",
     "login_logo": "Accedi con il tuo wallet digitale",
     "login_digital_identity": "Accedi con un'identità digitale",
     "login_alternative_method" : "Accedi con un metodo alternativo",
