--- a/iam-proxy-italia-project/static/locales/wallets-en.json
+++ b/iam-proxy-italia-project/static/locales/wallets-en.json
@@ -1,5 +1,6 @@
 {
   "titles": {
+    "page_title": "Login",
     "login_logo": "Log in with your digital wallet",
     "login_digital_identity": "Log in with a digital identity",
     "login_alternative_method" : "Log in using an alternative method",
