--- a/iam-proxy-italia-project/static/locales/qr-en.json
+++ b/iam-proxy-italia-project/static/locales/qr-en.json
@@ -1,4 +1,5 @@
 {
+  "page_title": "Login",
   "login_logo": "Log in with your digital wallet",
   "contentTitle": "Scan the QR code",
   "qrCodeValidInfo": "The QR code is valid for <b>{{seconds}}</b> seconds",
