--- a/iam-proxy-italia-project/static/locales/qr-it.json
+++ b/iam-proxy-italia-project/static/locales/qr-it.json
@@ -1,4 +1,5 @@
 {
+  "page_title": "Accedi",
   "login_logo": "Accedi con il tuo wallet digitale",
   "contentTitle": "Inquadra il codice QR",
   "qrCodeValidInfo": "Il codice QR è valido per <b>{{seconds}}</b> secondi",
