--- a/iam-proxy-italia-project/static/locales/wallets-en.json
+++ b/iam-proxy-italia-project/static/locales/wallets-en.json
@@ -20,7 +20,7 @@
       "name": "IT-Wallet",
       "logo_text": "Login with IT-Wallet",
       "logo": "wallet-it/wallet_icon.svg",
-      "login_url": "https://localhost/Saml2/disco?entityID=wallet",
+      "login_url": "https://localhost/Saml2/disco?entityID=openid4vp",
       "learn_more_descr": "IT-Wallet è il Sistema di portafoglio digitale italiano che ti dà il pieno controllo sulle tue informazioni, senza che l'ente che le ha rilasciate venga a conoscenza di quando e come vengono usate."
     },
     "spid": {
