--- a/iam-proxy-italia-project/static/locales/wallets-en.json
+++ b/iam-proxy-italia-project/static/locales/wallets-en.json
@@ -18,15 +18,15 @@
     },
     "cie_oidc": {
       "name": "CIE OIDC",
-      "logo_text": "Login with CIE OIDC",
+      "logo_text": "Entra con CIE OIDC",
       "logo": "cie/cie_white.svg",
-      "login_url": "/Saml2/disco?entityID=http://cie-provider.example.org:8002/oidc/op/"
+      "login_url": "#cie-idp-button"
     },
     "it_wallet": {
       "name": "IT-Wallet",
       "logo_text": "Login with IT-Wallet",
       "logo": "wallet-it/wallet_icon.svg",
-      "login_url": "https://localhost/Saml2/disco?entityID=wallet",
+      "login_url": "/Saml2/disco?entityID=wallet",
       "learn_more_descr": "IT-Wallet è il Sistema di portafoglio digitale italiano che ti dà il pieno controllo sulle tue informazioni, senza che l'ente che le ha rilasciate venga a conoscenza di quando e come vengono usate."
     },
     "spid": {
